--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -2,5 +2,14 @@
     <!-- Example customization of dimensions originally defined in res/values/dimens.xml
          (such as screen margins) for screens with more than 820dp of available width. This
          would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
-    <dimen name="activity_horizontal_margin">64dp</dimen>
+    <dimen name="padding_pantalla">24dp</dimen>
+    <dimen name="cassilla">160dp</dimen>
+    <dimen name="textoTitulo">48sp</dimen>
+    <dimen name="textoBoton">36sp</dimen>
+    <dimen name="anchoBoton">280dp</dimen>
+    <dimen name="altoBoton">72dp</dimen>
+    <dimen name="margenBoton">12dp</dimen>
+    <dimen name="radioBoton">12dp</dimen>
+    <dimen name="paddingBoton">12dp</dimen>
+    <dimen name="textoRadioBoton">24sp</dimen>
 </resources>
