--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,39 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="android:Theme.Holo.NoActionBar.Fullscreen">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+
+    </style>
+    
+    <style name="titulo">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/textoTitulo</item>
+    </style>
+    
+    <style name="boton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:minWidth">@dimen/anchoBoton</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">@dimen/altoBoton</item>
+        <item name="android:layout_margin">@dimen/margenBoton</item>
+        <item name="android:textSize">@dimen/textoBoton</item>
+        <item name="android:onClick">aJugar</item>
+    </style>
+    
+    <style name="radioBoton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/textoRadioBoton</item>
+        <item name="android:alpha">0.8</item>
+    </style>
+    
+    <style name="casillas">
+        <item name="android:layout_width">@dimen/cassilla</item>
+        <item name="android:layout_height">@dimen/cassilla</item>
+        <item name="android:src">@drawable/casilla</item>
+        <item name="android:onClick">toque</item>
     </style>
 
 </resources>
